--- a/html/index.html
+++ b/html/index.html
@@ -11,10 +11,9 @@
     <body>
       <div class="navbar">
         <a class="nav-link" href="index.html">Home</a>
-        <a class="nav-link" href=".html">About</a>
-        <a class="nav-link" href="Teachers.html">Teachers</a>
-        <a class="nav-link" href="Tutors.html">Tutors</a>
-        <a class="nav-link" href="Programs.html">Programs</a>
+        <a class="nav-link" href="About.html">About</a>
+        <a class="nav-link" href="Services.html">Services</a>
+
       </div>
       <div class="container">
         <h1>Welcome Scholar.Co</h1>
